WiP: Adds block annotations for Swagger docs
